--- a/style.css
+++ b/style.css
@@ -30,4 +30,7 @@ button {
     cursor: pointer;
     border-radius: 4px; 
     transition-duration: 0.4s;
+    position: fixed;
+    right: 20px;
+    left: 10px
 }
