--- a/style.css
+++ b/style.css
@@ -16,21 +16,26 @@ h1 {
     margin-top: 20%;
     font-size: 3em;
     text-shadow: 2px 2px 4px #000000;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    
 }
 button {
     background-color: #070000;
     color: white;
-    border: none;
+    border: aliceblue;
     padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    text-align: justify;
+    text-decoration: solid;
     font-size: 16px;
     margin: 4px 2px;
-    cursor: pointer;
     border-radius: 4px; 
     transition-duration: 0.4s;
     position: fixed;
-    right: 20px;
-    left: 10px
+    right: 10px;
+    left: 10px;
+    bottom: 10px;
+    scroll-margin: 10px;
 }
