--- a/cal.css
+++ b/cal.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('/image/math.gif');
+    background-image: url('/image/2.gif');
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
